# challenges

./: .gitignore  README.md
Advent Of Code/2016/: 9.py
GoogleHashCode2018/qualification_2018/: main.py
VkCup2018/qualification1/: A.py  C.py
VkCup2018/qualification2/: C.py  D.py
VkCup2018/round1/: B.py
VkCup2018/round2/: A.pl  E.pl
Ya.Blitz/: 1.py  2.py
Yandex.Algorithms.5.0/J/: README.md  Untitled.ipynb  pyproject.toml
Yandex.Algorithms.5.0/J/src/: __init__.py  __main__.py  token_type.py  tokenizer.py
Yandex.Algorithms.5.0/J/src/parsers/: base.py  space.py
Yandex.Cup.2021/Algorithms/: A.py  B.py  C.py
Yandex.Cup.2021/Frontend/: A-example.html  A.html  B.js
Yandex.Cup.2021/Qualification/: A.py  B.py  D.py
Yandex.Cup.2022/: ML.ipynb
Yandex.Cup.2022/Analytics/: C.ipynb  D.ipynb  E.ipynb
Yandex.Cup.2023/Algorithms/: B.py  C.py
Yandex.Cup.2023/Backend/: E.py  E_simplified.py  test1
Yandex.Cup.2023/Frontend/: Readme.md
Yandex.Cup.2023/Frontend/B/: solution.js
Yandex.Cup.2023/Frontend/C/: index.ts
Yandex.Cup.2023/Frontend/D/: playground.js
Yandex.Cup.2023/Frontend/E/: drawTree.js
Yandex.Cup.2023/Frontend/F/: .eslintrc.cjs  jest.config.cjs  tsconfig.json  webpack.config.babel.js
Yandex.Cup.2023/Frontend/G/: index.js  solution.js
Yandex.Cup.2024/Backend/: A.py  C.py
YandexAlgorithm2018/: 1.py  4.py
frontend-ctf-2026/: buttons.py  ciphers.js  flag_guess.js  helloworld.py  typescript.js
frontend-ctf-2026/stacked-alpha/: index.html  stacked-alpha.js
techcup/: B.py  C.py  D.py  E.py  ML.ipynb
vkcup/: B.py  C.py  D.py
(+29 files in other folders)
